--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+        <div class="wrapper">
+            <div class="sidebar">
+                blabla
+            </div>
+
+            <div class="header">
+
+            </div>
+
+            <div class="main-content">
+
+            </div>
+        </div>
 </body>
 </html>
