Add all items on the sidebar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,41 @@
 <body>
         <div class="wrapper">
             <div class="sidebar">
-                blabla
+                <div class="dashboard">
+                    <img src="./images/1view-dashboard(2).png" alt="dashboard" width="40" height="auto">
+                    <span>Dashboard</span>
+                </div>
+
+                <div class="account">
+                    <img src="./images/2home-outline.png" alt="home">
+                    <span>Home</span>
+
+                    <img src="./images/3human-male.png" alt="profile">
+                    <span>Profile</span>
+
+                    <img src="./images/4message-reply-outline.png" alt="messages">
+                    <span>Messages</span>
+
+                    <img src="./images/5clock-time-three-outline.png" alt="History">
+                    <span>History</span>
+
+                    <img src="./images/6file-multiple.png" alt="Tasks">
+                    <span>Tasks</span>
+
+                    <img src="./images/7human-queue.png" alt="Communities">
+                    <span>Communities</span>
+                </div>
+
+                <div class="settings">
+                    <img src="./images/8cog.png" alt="settings">
+                    <span>Settings</span>
+
+                    <img src="./images/9comment-question-outline.png" alt="Support">
+                    <span>Support</span>
+
+                    <img src="./images/10shield-check-outline.png" alt="Privacy">
+                    <span>Privacy</span>
+                </div>
             </div>
 
             <div class="header">
