--- a/index.html
+++ b/index.html
@@ -17,33 +17,33 @@
                 </div>
 
                 <div class="account">
-                    <img src="./images/2home-outline.png" alt="home">
+                    <img src="./images/2home-outline.png" alt="home" width="32" height="auto">
                     <span>Home</span>
 
-                    <img src="./images/3human-male.png" alt="profile">
+                    <img src="./images/3human-male.png" alt="profile" width="32" height="auto">
                     <span>Profile</span>
 
-                    <img src="./images/4message-reply-outline.png" alt="messages">
+                    <img src="./images/4message-reply-outline.png" alt="messages" width="32" height="auto">
                     <span>Messages</span>
 
-                    <img src="./images/5clock-time-three-outline.png" alt="History">
+                    <img src="./images/5clock-time-three-outline.png" alt="History" width="32" height="auto">
                     <span>History</span>
 
-                    <img src="./images/6file-multiple.png" alt="Tasks">
+                    <img src="./images/6file-multiple.png" alt="Tasks" width="32" height="auto">
                     <span>Tasks</span>
 
-                    <img src="./images/7human-queue.png" alt="Communities">
+                    <img src="./images/7human-queue.png" alt="Communities" width="32" height="auto">
                     <span>Communities</span>
                 </div>
 
                 <div class="settings">
-                    <img src="./images/8cog.png" alt="settings">
+                    <img src="./images/8cog.png" alt="settings" width="32" height="auto">
                     <span>Settings</span>
 
-                    <img src="./images/9comment-question-outline.png" alt="Support">
+                    <img src="./images/9comment-question-outline.png" alt="Support" width="32" height="auto">
                     <span>Support</span>
 
-                    <img src="./images/10shield-check-outline.png" alt="Privacy">
+                    <img src="./images/10shield-check-outline.png" alt="Privacy" width="32" height="auto">
                     <span>Privacy</span>
                 </div>
             </div>
