--- a/index.html
+++ b/index.html
@@ -49,7 +49,19 @@
             </div>
 
             <div class="header">
+                <div class="upper">
+                    <img src="./images/11magnify(1).png" alt="Magnifying glass" height="30" width="auto" class="magnify">
+                    <input type="search" name="search" id="search">
 
+                    <img src="./images/12bell-ring-outline.svg" alt="Bell Ring" height="30" width="auto" class="magnify">
+                    <img src="./images/13new_popeye" alt="Popeye Avatar" height="40" width="auto" class="popeye">
+
+                    <div class="account-name">Long John</div>
+                </div>
+
+                <div class="lower">
+
+                </div>
             </div>
 
             <div class="main-content">
