--- a/index.html
+++ b/index.html
@@ -60,7 +60,16 @@
                 </div>
 
                 <div class="lower">
-
+                    <div class="lower-left">
+                        <img src="./images/13new_popeye" alt="Popeye image" class="popeye-lower" height="50" width="auto">
+                        <div class="greet">Hi there,</div>
+                        <div class="account-2"> Long John (@silver)</div>
+                    </div>
+                    <div class="lower-right">
+                        <button>New</button>
+                        <button>Upload</button>
+                        <button>Share</button>
+                    </div>
                 </div>
             </div>
 
