Finish left side of main content

--- a/index.html
+++ b/index.html
@@ -74,7 +74,93 @@
             </div>
 
             <div class="main-content">
+                    <div class="main-left">
+                        <div class="your-projects">Your projects</div>
+                        <div class="project-cards">
+                            <div class="card">
+                                <div class="card-header">
+                                    Super Cool Project
+                                </div>
+                                <div class="card-content">
+                                    Nec tincidunt praesent semper feugiat nibh sed. Faucibus interdum posuere lorem ipsum dolor.
+                                </div>
+                                <div class="card-footer">
+                                    <img src="./images/cardFooter/star-plus-outline.svg" alt="Star the project" height="25" width="auto">
+                                    <img src="./images/cardFooter/eye-plus-outline.svg" alt="Watch the project" height="25" width="auto">
+                                    <img src="./images/cardFooter/source-fork.svg" alt="Fork the project" height="25" width="auto">
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    Less Cool Project
+                                </div>
+                                <div class="card-content">
+                                    Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada proin. Dui accumsan sit amet nulla facilisi morbi tempus.
+                                </div>
+                                <div class="card-footer">
+                                    <img src="./images/cardFooter/star-plus-outline.svg" alt="Star the project" height="25" width="auto">
+                                    <img src="./images/cardFooter/eye-plus-outline.svg" alt="Watch the project" height="25" width="auto">
+                                    <img src="./images/cardFooter/source-fork.svg" alt="Fork the project" height="25" width="auto">
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    Impossible App
+                                </div>
+                                <div class="card-content">
+                                    Vitae semper quis lectus nulla at volutpat. Et tortor consequat id porta nibh venenatis.
+                                </div>
+                                <div class="card-footer">
+                                    <img src="./images/cardFooter/star-plus-outline.svg" alt="Star the project" height="25" width="auto">
+                                    <img src="./images/cardFooter/eye-plus-outline.svg" alt="Watch the project" height="25" width="auto">
+                                    <img src="./images/cardFooter/source-fork.svg" alt="Fork the project" height="25" width="auto">
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    Easy Peasy App
+                                </div>
+                                <div class="card-content">
+                                    Elit ullamcorper dignissim cras tincidunt. Consequat nisl vel pretium lectus quam. Mauris ultrices eros in cursus turpis. Quisque non tellus orci ac auctor augue mauris augue neque.
+                                </div>
+                                <div class="card-footer">
+                                    <img src="./images/cardFooter/star-plus-outline.svg" alt="Star the project" height="25" width="auto">
+                                    <img src="./images/cardFooter/eye-plus-outline.svg" alt="Watch the project" height="25" width="auto">
+                                    <img src="./images/cardFooter/source-fork.svg" alt="Fork the project" height="25" width="auto">
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    Ad Blocker
+                                </div>
+                                <div class="card-content">
+                                    Aliquam ut porttitor leo a diam sollicitudin tempor. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Est placerat in egestas erat imperdiet sed. Magna etiam tempor orci eu lobortis elementum.
+                                </div>
+                                <div class="card-footer">
+                                    <img src="./images/cardFooter/star-plus-outline.svg" alt="Star the project" height="25" width="auto">
+                                    <img src="./images/cardFooter/eye-plus-outline.svg" alt="Watch the project" height="25" width="auto">
+                                    <img src="./images/cardFooter/source-fork.svg" alt="Fork the project" height="25" width="auto">
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    Money Maker
+                                </div>
+                                <div class="card-content">
+                                    Ultricies leo integer malesuada nunc vel risus commodo. Eu mi bibendum neque egestas congue quisque. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Auctor augue mauris augue neque gravida in fermentum et sollicitudin.
+                                </div>
+                                <div class="card-footer">
+                                    <img src="./images/cardFooter/star-plus-outline.svg" alt="Star the project" height="25" width="auto">
+                                    <img src="./images/cardFooter/eye-plus-outline.svg" alt="Watch the project" height="25" width="auto">
+                                    <img src="./images/cardFooter/source-fork.svg" alt="Fork the project" height="25" width="auto">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="main-right">
+
+                    </div>
             </div>
         </div>
 </body>
