Style main-right

--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@
                     </div>
 
                     <div class="main-right">
-
+                        <div class="announcements">Announcements</div>
+                        <div class="announcements-contents"></div>
+                        <div class="trending">Trending</div>
+                        <div class="trending-content"></div>
                     </div>
             </div>
         </div>
