--- a/index.html
+++ b/index.html
@@ -160,7 +160,16 @@
 
                     <div class="main-right">
                         <div class="announcements">Announcements</div>
-                        <div class="announcements-contents"></div>
+                        <div class="announcements-contents">
+                            <div class="heading">Site Maintenance</div>
+                            <div class="a-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat...</div>
+                            <hr width="100%">
+                            <div class="heading">Community Share Day</div>
+                            <div class="a-content">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</div>
+                            <hr width="100%">
+                            <div class="heading">Updated Privacy Policy</div>
+                            <div class="a-content">Id nibh tortor id aliquet lectus proin nibh nisl condimentum. Pharetra et ultrices neque ornare aenean euismod elementum nisi quis...</div>
+                        </div>
                         <div class="trending">Trending</div>
                         <div class="trending-content"></div>
                     </div>
