Finish the project

--- a/index.html
+++ b/index.html
@@ -171,7 +171,37 @@
                             <div class="a-content">Id nibh tortor id aliquet lectus proin nibh nisl condimentum. Pharetra et ultrices neque ornare aenean euismod elementum nisi quis...</div>
                         </div>
                         <div class="trending">Trending</div>
-                        <div class="trending-content"></div>
+                        <div class="trending-content">
+                            <div class="left-trending-content">
+                                <img src="./images/14bear.png" alt="Bear Avatar" height="60" width="auto">
+                                <img src="./images/15woman(1).png" alt="Bear Avatar" height="60" width="auto">
+                                <img src="./images/16gamer.png" alt="Bear Avatar" height="60" width="auto">
+                                <img src="./images/17man.png" alt="Bear Avatar" height="60" width="auto">
+                                
+                            </div>
+                            <div class="right-trending-content">
+                                <div class="user-wrapper">
+                                    <div class="user-trending">@tegan</div>
+                                    <div class="app-trending">World Peace Builder</div>
+                                </div>
+
+                                <div class="user-wrapper">
+                                    <div class="user-trending">@morgana</div>
+                                    <div class="app-trending">Super Swift Project</div>
+                                </div>
+
+                                <div class="user-wrapper">
+                                    <div class="user-trending">@kendall</div>
+                                    <div class="app-trending">Life Changing App</div>
+                                </div> 
+
+                                <div class="user-wrapper">
+                                    <div class="user-trending">@alex</div>
+                                    <div class="app-trending">No Traffic Maker</div>
+                                </div>
+                            </div>
+                            
+                        </div>
                     </div>
             </div>
         </div>
